[SC-10946] fixed center alignment of stats columns

--- a/src/app/crm/reports/reports.component.less
+++ b/src/app/crm/reports/reports.component.less
@@ -14,4 +14,7 @@
             border-bottom: 1px solid #ddd !important;
         }
     }
+    .dx-datagrid-rowsview .dx-datagrid-content table:first-child .clipboard-holder {
+        padding-right: 0 !important;
+    }
 }
